--- a/app/package.json
+++ b/app/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.8",
+    "chart.js": "^4.4.4",
     "firebase": "^10.13.1",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.26.1"
